# devops-ecommerce

./: .flake8  .gitignore  CHANGELOG.md  README.md  SECURITY.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build-artifact.yml  ci-webserver.yaml  ci.yml  format.yml
docs/: CONTRIBUTING.md  branching.md  project.toml  versioning.md
src/ecommerce/: application.py  wsgi.py
tests/: test_app.py
tests/integration/: test_workflow.py
